apuntes casi completos hasta el segundo parcial

--- a/galois/galois.tex
+++ b/galois/galois.tex
@@ -196,6 +196,8 @@ numbered=no
 \newcommand{\actar}{\curvearrowright}
 \newcommand{\vabs}[1]{\left|#1\right|}
 \newcommand{\rest}[1]{\left.#1\right|}
+\renewcommand{\exp}[1]{\mathrm{exp}(#1)}
+\newcommand{\mcm}[1]{\mathrm{mcm}\sdf{#1}}
 %\DeclareMathSymbol{\varprod}{\mathop}{largesymbolsA}{16}
 
 \newcommand{\hr}{\rule{\textwidth}{.4pt}}
